--- a/frontend/src/styles/filter_nav.css
+++ b/frontend/src/styles/filter_nav.css
@@ -15,16 +15,20 @@
     font-size: 12px;
   }
   .issue_list_con{
+    box-shadow: 0px 0px 1px 0px #353434;
+
       box-sizing: border-box;
     width:100%;
     padding:10px;
     height:100px;
-    border: 1px solid black;
+    
     background-color:white;
   }
   .main_container{
+      
       width: 80%;
       margin: auto;
+      box-shadow: 0px 0px 2px 0px #1f1f1f;
 
   }
   .main_con{
